# zk_scripts

./: .gitignore  README.md  bibbuild  bibview  config.example.yaml  config_loader.sh  install.sh  personSearch  poll_backlinks  py_zk.py  pyproject.toml  test_config.py  test_integration.py  test_query_tags.py  working_mem  workout_log.py  zk-wikilink  zk_fzf  zk_index  zk_index.py
test_data/: index.json
tests/: __init__.py  test_bibliography.py  test_commands.py  test_config.py  test_constants.py  test_fzf_interface.py  test_fzf_manager.py  test_index.py  test_markdown.py  test_utils.py  test_wikilink_generator.py
zk_core/: __init__.py  analytics.py  backlinks.py  bibbuild.py  bibview.py  commands.py  constants.py  fzf_interface.py  fzf_manager.py  fzf_utils.py  index.py  markdown.py  models.py  person_search.py  query.py  utils.py  wikilink_generator.py  working_mem.py  workout_log.py
zk_core/bibliography/: __init__.py  builder.py  viewer.py
zk_core/config/: __init__.py
